pug.log
/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (738:0)
    at pp$4.raise (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at pp.unexpected (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at pp$3.parseExprAtom (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at pp$3.parseExprSubscripts (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at pp$3.parseMaybeUnary (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at pp$3.parseExprOps (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at pp$3.parseMaybeConditional (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at pp$3.parseMaybeAssign (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at pp$1.parseVar (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at pp$1.parseVarStatement (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 34795,
  loc: Position { line: 738, column: 0 },
  raisedAt: 34796
}

Node.js v20.18.3
/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (738:0)
    at pp$4.raise (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at pp.unexpected (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at pp$3.parseExprAtom (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at pp$3.parseExprSubscripts (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at pp$3.parseMaybeUnary (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at pp$3.parseExprOps (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at pp$3.parseMaybeConditional (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at pp$3.parseMaybeAssign (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at pp$1.parseVar (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at pp$1.parseVarStatement (/usr/local/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 35737,
  loc: Position { line: 738, column: 0 },
  raisedAt: 35738
}

Node.js v20.18.3
